fixed padding on mobile responsive nav on scroll

--- a/style/index.css
+++ b/style/index.css
@@ -120,7 +120,7 @@ header::after{
     left: 0;
     transition: all .3s ease-in-out;
     z-index: 3;
-    padding: 10px 0;
+    padding: 10px 0 0 0;
 }
 #nav-wrapper {
     display: flex;
@@ -154,10 +154,7 @@ header::after{
     padding: 10px;
     border-radius: 4px;
 }
-#contact:hover {
-    background: #10164b;
-    color: #fff;
-}
+
 #burger-menu {
     display: none;
 }
@@ -248,30 +245,15 @@ main {
     align-items: center;
     padding: 320px 0 50px 0;
 }
-#tinted-img-outer{
-    width: 100%;
-    height: 320px;
-    overflow: hidden;
-    border: 3px solid #10164b;
-    transform-origin: 0;
-    transform: skewY(-12deg);
+#tinted-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
-#tinted-img-inner{
-    background:
-    radial-gradient(
-        rgba(0,0,0,0),
-        rgba(0,0,0,0)
-    ),
-    url('../Public/img/IMG_1926.jpg');
-    width: 520px;
-    height: 130%;
-    z-index: 0;
-    transform: skewY(12deg);
-}
-/* #h2-about-me{
+#h2-about-me{
     font-family: 'Poppins', sans-serif;
     font-weight: 800;
-} */
+}
 
 #brand-statement {
     font-family: 'Poppins', sans-serif;
@@ -312,7 +294,7 @@ main {
     flex-basis: auto;
     transition: all .3s ease-in-out;
     overflow: hidden;
-    box-shadow: 0 2px 10px rgba(0,0,0,.6);
+    box-shadow: 0 2px 5px rgba(0,0,0,.5);
     border-radius: 4px;
 }
 .project-img {
@@ -482,7 +464,7 @@ textarea {
     height: 55px;
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all .2s ease-in-out;
+    transition: all .1s ease-in-out;
     background-color: #3043d4;
     border-color: #3043d4;
     cursor: pointer;
@@ -593,7 +575,7 @@ li:last-child {
 
     /* HEADER */
     #header-nav {
-        padding: 0 30px;
+        padding: 10px 20px 0 20px;
     }
     #home {
         padding-left: 0;
